--- a/DOWTank/DOWTank.csproj
+++ b/DOWTank/DOWTank.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AdminEquipmentModel.cs" />
     <Compile Include="Models\DispatchTankModel.cs" />
     <Compile Include="Models\LoginPostModel.cs" />
     <Compile Include="Models\Select2ShortViewModel.cs" />
