--- a/DOWTank.Core/DOWTank.Core.csproj
+++ b/DOWTank.Core/DOWTank.Core.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_WasteClassTypeDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_WasteClassTypeDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_WasteClassUpd_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_upd\TANK_usp_del_OnHireHistory_spParams.cs" />
     <Compile Include="Domain\TANK_usp_upd\TANK_usp_upd_ArriveEquipment_spParams.cs" />
     <Compile Include="DOWTankDataModel.Context.cs">
       <AutoGen>True</AutoGen>
