--- a/DOWTank.Core/DOWTank.Core.csproj
+++ b/DOWTank.Core/DOWTank.Core.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Domain\TANK_usp_insupd\TANK_usp_insupd_TankPrep_spParams.cs" />
     <Compile Include="Domain\TANK_usp_insupd\TANK_usp_insupd_Vendor_spParams.cs" />
     <Compile Include="Domain\TANK_usp_insupd\TANK_usp_insupd_WasteClassType_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_insupd\TANK_usp_upd_TankTestDates_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_AuditDrivers_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_AuditDrivers_spResults.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_AuditMissingMoves_spParams.cs" />
