--- a/DOWTank.Core/DOWTank.Core.csproj
+++ b/DOWTank.Core/DOWTank.Core.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_WasteClassUpd_spParams.cs" />
     <Compile Include="Domain\TANK_usp_upd\TANK_usp_del_OnHireHistory_spParams.cs" />
     <Compile Include="Domain\TANK_usp_upd\TANK_usp_upd_ArriveEquipment_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_upd\TANK_usp_upd_SecurityDefaultLocation_spParams.cs" />
     <Compile Include="DOWTankDataModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
